include basic hello world link for game folder method (just in case)

--- a/docs/getting-started/get-lovepotion.mdx
+++ b/docs/getting-started/get-lovepotion.mdx
@@ -37,7 +37,7 @@ Once the files are done extracting, transfer the executable (3dsx, nro, wuhb) bi
 
 It is likely that the parent directory does not exist yet, so the folder will need to be created.
 
-Now create a folder called `game` inside of the `lovepotion` directory. Inside of this will be your source files for what LÖVE Potion will be running. Inside of `game` should be a file named `main.lua`. The content of this file is the main entry point.
+Now create a folder called `game` inside of the `lovepotion` directory. Inside of this will be your source files for what LÖVE Potion will be running. Inside of `game` should be a file named `main.lua`. The content of this file is the main entry point, and for this tutorial will be [a basic "Hello World"](/docs/welcome.md#hello-world).
 
 After all files have been created, simply launch LÖVE Potion from the Homebrew Menu (3DS, Switch) or Home Menu (Wii U) and it will run your game.
 
